// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFilters should populate fields 1`] = `
<Fragment>
  <p>
    <small>
      Each of these filters accept comma-separated values.
    </small>
  </p>
  <div
    className="FieldWrapper"
    key="coffee"
  >
    <TextField
      id="coffee"
      label="Elixir Of Life"
      onChange={[Function]}
      resize="both"
      type="text"
      value="espresso"
    />
  </div>
  <div
    className="FieldWrapper"
    key="context"
  >
    <TextField
      id="context"
      label="Relevence"
      onChange={[Function]}
      resize="both"
      type="text"
    />
  </div>
</Fragment>
`;

exports[`TextFilters should render correctly 1`] = `
<Fragment>
  <p>
    <small>
      Each of these filters accept comma-separated values.
    </small>
  </p>
  <div
    className="FieldWrapper"
    key="coffee"
  >
    <TextField
      id="coffee"
      label="Elixir Of Life"
      onChange={[Function]}
      resize="both"
      type="text"
    />
  </div>
  <div
    className="FieldWrapper"
    key="context"
  >
    <TextField
      id="context"
      label="Relevence"
      onChange={[Function]}
      resize="both"
      type="text"
    />
  </div>
</Fragment>
`;
